Align fix på hovedside(linker helt nederst) lagt til link for å sende til kartet ved klikk på f.eks prix. men oppstår en bug som ser ut til å være flere kall av google api og mapet reloades og viser ikke rute. og om noen kunne fikse blåfargen ved hover, la inn &:hover i css men den gir 0 faen om den

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -169,7 +169,7 @@ li {
 }
 
 a {
-  &:visited, &:link, &:active{
+  &:visited, &:link, &:active, &:hover{
     color: white;
   }
 }
